Adapt to dark mode
Signed-off-by: samzong <samzong.lu@gmail.com>

--- a/iMusicPlayer/Info.plist
+++ b/iMusicPlayer/Info.plist
@@ -6,5 +6,9 @@
 	<array>
 		<string>audio</string>
 	</array>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>需要访问您的音乐库来播放音乐</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 </dict>
 </plist>
